Fri Jan 19 13:53:37 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * rules.tao.GNU:

          Turn on the 'transport_current' feature by default.  Previously,
          the TransporCurrent related libraries were not being compiled with
          the GNUmakefiles.

Thu Jan 18 12:05:47 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/TransportCurrent/Current_Impl.cpp:
          Fixig a "fuzz" error.

Wed Jan 17 22:53:22 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * NEWS:
        * docs/transport_current/index.html:

          Updated the documentation on how to disable the
          Transport::Current functionality.

        * MPC/config/taodefaults.mpb:

          Added a "feature(!transport_current)..." to help enable and
          disable the Transport::Current features (and footprint impact).

        * MPC/config/tc.mpb:

          Projects inheriting from this will get "requires += transport_current"

        * tao/TC.mpc:
        * tao/TC_IIOP.mpc:

          Added "requires += transport_current"

        * tao/orbconf.h:

          Fixing a macro re-definition when "transport_current=0" is
          present in default.features.


Wed Jan 17 18:16:18 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/Transport.h:
        * tao/Transport.inl:
        * tao/Transport.cpp:
        * tao/TransportCurrent/Current_Impl.h:
        * tao/TransportCurrent/Current_Impl.cpp:
        * tao/TransportCurrent/Current_Loader.h:
        * tao/TransportCurrent/Current_Loader.cpp:
        * tao/TransportCurrent/IIOP_Current_Impl.h:
        * tao/TransportCurrent/IIOP_Current_Impl.cpp:
        * tao/TransportCurrent/IIOP_Current_Loader.h:
        * tao/TransportCurrent/IIOP_Current_Loader.cpp:
        * tests/TransportCurrent/IIOP/client.cpp:
        * tests/TransportCurrent/IIOP/server.cpp:

          Updated to prevent any footprint impact when
          Transport::Current functionality is disabled